resolve ui issues

--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -2673,6 +2673,9 @@
   }
   .view-front-end-global-search .view-content li.itg-search-list {
     padding: 25px 0;
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
   }
   .view-front-end-global-search .view-content li.itg-search-list + li {
     border-top: none;
@@ -2680,6 +2683,7 @@
   .view-front-end-global-search .view-content .search-pic {
     width: 170px;
     height: 127px;
+    float: left;
   }
   .view-front-end-global-search .view-content .search-detail h2 {
     font-size: 22px;
@@ -2787,24 +2791,6 @@
     font-size: 22px;
     font-size: 1.375rem;
     line-height: 28px;
-  }
-  .view-archive-story .view-content .search-pic {
-    width: 170px;
-    height: 127px;
-  }
-  .view-archive-story .view-content .search-detail h2 {
-    font-size: 22px;
-    font-size: 1.375rem;
-    line-height: 28px;
-    margin-top: -5px;
-  }
-  .view-archive-story .view-content .search-detail h2 a {
-    font-size: 22px;
-    font-size: 1.375rem;
-    line-height: 28px;
-  }
-  .view-archive-story .view-content .search-detail p {
-    display: block;
   }
 
   /*Start anchors listing css*/
