ITG-3726 #time 1h #comment ui issues resolved.

--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11893,3 +11893,6 @@ fieldset#edit-xmlsitemap{
     @extend .hide;
   }
 } 
+.node-videogallery-form .form-field-type-field-collection{
+  @extend .image-repo-browse;
+}
