--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11896,3 +11896,4 @@ fieldset#edit-xmlsitemap{
 .node-videogallery-form .form-field-type-field-collection{
   @extend .image-repo-browse;
 }
+.page-itg-event-past-spekars table tbody td{vertical-align: top;}
