ITG-2627 #time 1h #comment ui done

--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -1807,6 +1807,9 @@ input[type="file"], input[type="submit"], input[type="text"] {
   font: 400 14px/18px Roboto;
   color: #322323;
 }
+.question-container .answer-container iframe {
+  display: block;
+}
 
 .survey-form-wrapper-all .question-container {
   display: block;
