--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -1726,6 +1726,7 @@ input[type="file"], input[type="submit"], input[type="text"]{
         color: #322323;
       }
     }
+    iframe{display: block;}
   }
 }
 .survey-form-wrapper-all{
