ITG-3769 #time 1h #comment ui done

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14276,6 +14276,58 @@ span.close_btt {
   display: none;
 }
 
+.past-speaker .views-field-title {
+  text-transform: uppercase;
+  padding: 10px 0 0;
+}
+
+.past-speaker .views-field-field-story-new-title {
+  font-size: 13px;
+  color: #8d8d8d;
+}
+
+.past-speaker .slick-list {
+  max-width: 620px;
+  margin: 0 auto;
+}
+
+.past-speaker .slick-arrow {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.past-speaker .slick-arrow.fa-chevron-right {
+  right: 0;
+}
+
+.past-speaker-list {
+  text-align: center;
+}
+
+.past-speaker a {
+  display: block;
+}
+
+.past-speaker a img {
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+#block-views-past-speaker-event-block-1 .block-title {
+  font-size: 24px;
+  color: #ef3c24;
+  font-family: "Roboto Slab", sans-serif;
+  margin-bottom: 15px;
+}
+
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
   .view-front-end-global-search .view-content .itg-search-list > .social-share {
