ITG-3773 #time 30m #comment ui done.

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -8542,6 +8542,10 @@ section.sidebar .block-itg-ads {
   margin-bottom: 50px;
 }
 
+.event-registration-link {
+  line-height: 36px;
+}
+
 #block-itg-event-backend-event-sign-and-win h1, #block-itg-event-backend-event-registration h1 {
   font-family: "Roboto Slab", sans-serif;
   font-size: 40px;
