--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -6664,6 +6664,9 @@ section.sidebar{
     font-weight: 700;
     margin-bottom: 50px;
 }
+.event-registration-link{
+  line-height: 36px;
+}
 #block-itg-event-backend-event-sign-and-win, #block-itg-event-backend-event-registration{
     h1{
         font-family: $itg-robotoslab;
