ITG-3653 #time 1h #comment now done.

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11751,7 +11751,7 @@ span.close_btt {
   font-family: "Roboto Slab", sans-serif;
   margin-bottom: 15px;
 }
-
+.logged-in .header-top .links.inline.clearfix{display: none;}
 
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
