--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11898,3 +11898,4 @@ fieldset#edit-xmlsitemap{
   @extend .image-repo-browse;
 }
 .page-itg-event-past-spekars table tbody td{vertical-align: top;}
+ #views-exposed-form-report-filed-content-page #edit-from-state-wrapper {display:none !important}
