--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14332,6 +14332,10 @@ span.close_btt {
   margin-bottom: 15px;
 }
 
+.logged-in .header-top .links.inline.clearfix {
+  display: none;
+}
+
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
   .view-front-end-global-search .view-content .itg-search-list > .social-share {
