--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -1306,11 +1306,19 @@ div.vertical-tabs {
             }
             .image-preview{
               padding: 0;
+              height: 124px;
               @extend .full;
               max-width: none;
+              @extend .pos-rel;
               img{
-                height: 124px;
-                width: 100%;
+                max-width: 100%;
+                max-height: 100%;
+                position: absolute;
+                left: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                margin: auto;
               }
               .image-fullname{
                 @extend .desc-popup;
