--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14336,6 +14336,77 @@ span.close_btt {
   display: none;
 }
 
+.sso-header {
+  background-color: #151515;
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+}
+.sso-header .back-to-itg {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  padding: 10px 0 10px 45px;
+  font-size: 16px;
+  font-weight: 300;
+  font-family: Roboto;
+  color: #aaa;
+  margin: 28px 0;
+}
+.sso-header .back-to-itg .fa {
+  width: 35px;
+  height: 35px;
+  border: 2px solid #aaa;
+  border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.sso-header .back-to-itg .fa:before {
+  font-size: 24px;
+  line-height: 30px;
+}
+.sso-header .itg-logo {
+  float: right;
+}
+
+.Main-heading-login {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.sso-footer {
+  background-color: #151515;
+  display: inline-block;
+  padding-top: 20px;
+  vertical-align: top;
+  width: 100%;
+}
+.sso-footer .site-menu li {
+  display: inline-block;
+  vertical-align: top;
+  margin: 5px 0;
+  width: 220px;
+}
+.sso-footer .site-menu li a {
+  color: #ddd;
+  font-family: Roboto;
+  font-size: 12px;
+}
+.sso-footer .site-menu li a:hover {
+  text-decoration: underline;
+}
+.sso-footer p {
+  padding: 10px 0;
+  margin: 20px 0 0;
+  border-top: 1px solid #666;
+  color: #666;
+  font-family: Roboto;
+  font-size: 12px;
+  text-align: center;
+}
+
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
   .view-front-end-global-search .view-content .itg-search-list > .social-share {
