--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11752,6 +11752,76 @@ span.close_btt {
   margin-bottom: 15px;
 }
 .logged-in .header-top .links.inline.clearfix{display: none;}
+.sso-header{
+  background-color: #151515;
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  .back-to-itg{
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    padding: 10px 0 10px 45px;
+    font-size: 16px;
+    font-weight: 300;
+    font-family: Roboto;
+    color: #aaa;
+    margin: 28px 0;
+    .fa{
+      width: 35px;
+      height: 35px;
+      border: 2px solid #aaa;
+      border-radius: 50%;
+      text-align: center;
+      position: absolute;
+      left: 0;
+      top: 0;
+      &:before{
+        font-size: 24px;
+        line-height: 30px;
+      }
+    }
+  }
+  .itg-logo{
+    float: right;
+  }
+}
+.Main-heading-login{
+  text-align: center;
+  margin-bottom: 20px;
+}
+.sso-footer{
+  background-color: #151515;
+  display: inline-block;
+  padding-top: 20px;
+  vertical-align: top;
+  width: 100%;
+  .site-menu{
+    li{
+      display: inline-block;
+      vertical-align: top;
+      margin: 5px 0;
+      width: 220px;
+      a{
+        color: #ddd;
+        font-family: Roboto;
+        font-size: 12px;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  p{
+    padding: 10px 0;
+    margin: 20px 0 0;
+    border-top: 1px solid #666;
+    color: #666;
+    font-family: Roboto;
+    font-size: 12px;
+    text-align: center;
+  }
+}
 
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
