--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -2254,6 +2254,15 @@ body.has-cart-popup{
     font-size: 14px;
     font-family: Roboto;
   }
+  .center-heading{
+    text-align: center;
+    h2{
+      font-size: 28px;
+      font-weight: 400;
+      line-height: 36px;
+      margin: 20px 0;
+    }
+  }
 }
 [id*="itg_user_forgot_password_multistep_form"]{
     margin: 0 -15px;
@@ -2706,7 +2715,7 @@ body.has-cart-popup{
     }
   }
 }
-.page-user{
+.page-user, .page-signup{
     form{
         font-family: Roboto;
         max-width: 580px; 
@@ -2818,7 +2827,7 @@ body.has-cart-popup{
         }
       }
     }
-    .sign-border{
+    .sign-border, .signup-txt{
       text-align: center;
       position: relative;
       margin: 30px 0;
@@ -2864,18 +2873,16 @@ body.has-cart-popup{
         }
     }
 }
+.page-signup form{
+  padding: 20px 0;
+}
 [id*="itg-sso-reg-multistep-form"], [id*="itg-user-forgot-password-multistep-form"]{
   #email-sucess, #thank-you, #mobile-success{
     color: #009c00;
     margin: 20px;
   }
 }
-.sign-in-link{
-  padding: 20px;
-  .signup-link{
-    float: left;
-  }
-}
+
 #fotp{
   padding: 0 15px;
   .form-item-fotp{
