--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -511,7 +511,7 @@ header{
         }
     }
 }
-.page-user{
+.page-user, .page-signup{
     form{
         max-width: 440px; margin: 0 auto;
         h2{
@@ -6031,7 +6031,7 @@ section.sidebar{
             border-radius: 3px;
             color: #fff;
             font-size: 16px;
-            height: 38px;
+            height: 50px;
             width: 200px;
             text-align: center;
             line-height: 35px;
@@ -6065,9 +6065,15 @@ section.sidebar{
     .email-error, .mobile-error{font-size: 13px; color: red;}
 }
 .sign-in-link{
-    padding: 20px 0;
-    text-align: right;
-    a{
+  max-width: 550px;
+    margin: 0 auto;
+    .left-block{
+      float: left;
+    }
+    .rgt-block{
+      float: right;
+    }
+    a, .left-block{
         font-size: 12px;
         color: #666;
     }
