--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -6069,6 +6069,7 @@ section.sidebar{
     margin: 0 auto;
     .left-block{
       float: left;
+      span{color: red;}
     }
     .rgt-block{
       float: right;
