--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -3518,7 +3518,7 @@ span.personal-social-share-links {
     color: #fff;
     font-size: 14px;
 }
-#itg-sso-reg-multistep-form--2 .sign-in-link {
+#itg-sso-reg-multistep-form--2 .sign-in-link, #itg-sso-reg-multistep-form--3 .sign-in-link {
     text-align: center;
 }
 .forgot-error {
