--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -3648,7 +3648,7 @@ span.personal-social-share-links {
   font-size: 14px;
 }
 
-#itg-sso-reg-multistep-form--2 .sign-in-link {
+#itg-sso-reg-multistep-form--2 .sign-in-link, #itg-sso-reg-multistep-form--3 .sign-in-link {
   text-align: center;
 }
 
