ITG-3878 #time 3h #comment resolve amp issues

--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -3509,7 +3509,7 @@ span.personal-social-share-links {
       line-height: 30px;
     }
 }
-#itg-sso-reg-multistep-form--2 a.sso-sign-in {
+#itg-sso-reg-multistep-form--2 a.sso-sign-in, #itg-sso-reg-multistep-form--3 a.sso-sign-in {
     display: inline-block;
     vertical-align: top;
     padding: 10px 20px;
